# STM32MP1

./: .gitignore  FTDI_USB筆記.md  MP1_GUI架構與資料流.md  MP1_Rust_GUI開發筆記.md  MP1_USB感測器與面板GUI整合筆記.md  MP1_知識總整理.md  README.md  monitor_mp1.py  mp1-vnc.service  os-release-from-board.txt  probe_mp1.py  run_cmd_mp1.py  test_upload.txt  網路設定.md
ftdi-mod/: Dockerfile  board.config  sc.sh  sertest.sh
mp1gui/: .dockerignore  Cargo.toml  Dockerfile  deploy.ps1  diag.sh  run-panel.sh
mp1gui/src/: main.rs
mp1gui/ui/: app.slint
