[package]
name = "mp1gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Read measurement values from a USB-serial device (CDC-ACM/FTDI) at 115200 8N1.
# Linux backend uses libudev -> board already ships libudev.so.1.
serialport = "4"
slint = { version = "1.8", default-features = false, features = [
    "compat-1-2",
    "std",
    "backend-winit",
    "backend-linuxkms-noseat",
    "renderer-software",
] }

[build-dependencies]
slint-build = "1.8"

# Keep build fast under QEMU emulation: optimize a bit, skip heavy LTO.
[profile.release]
opt-level = 2
lto = false
strip = true
